--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+        nixpkgs: ["pinned", "release-21.11", "nixpkgs-unstable"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2.4.0
       - uses: cachix/install-nix-action@v16
+      - run: |
+          if [[ "${{ matrix.nixpkgs }}" == "pinned" ]]; then
+              nix flake metadata
+          else
+              nix flake update --override-input nixpkgs \
+                  "nixpkgs/${{ matrix.nixpkgs }}"
+          fi
       - run: nix flake check
-      - run: nix build .#notmuch.{out,emacs,man,info}
+      - run: nix build --print-build-logs .#notmuch.{out,emacs,man,info}
