--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        nixpkgs: ["pinned", "release-21.11", "nixpkgs-unstable"]
+        # Currently some crypto-related test failures on
+        # ‘nixpkgs-unstable’ or I’d test that too.
+        nixpkgs: ["pinned", "release-21.11", "release-21.05"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2.4.0
@@ -19,9 +21,17 @@ jobs:
       - run: |
           if [[ "${{ matrix.nixpkgs }}" == "pinned" ]]; then
               nix flake metadata
+          elif [[ "${{ matrix.nixpkgs }}" == "release-21.05" ]]; then
+              # The very latest pre-commit-hooks references a package
+              # (statix) not in nixpkgs 21.05, and we want the hooks’
+              # nixpkgs follow ours. So specify slightly older commit.
+              nix flake update \
+                  --override-input nixpkgs "nixpkgs/${{ matrix.nixpkgs }}" \
+                  --override-input pre-commit-hooks \
+                  "github:cachix/pre-commit-hooks.nix/ff9c0b459ddc4b79c06e19d44251daa8e9cd1746"
           else
-              nix flake update --override-input nixpkgs \
-                  "nixpkgs/${{ matrix.nixpkgs }}"
+              nix flake update \
+                  --override-input nixpkgs "nixpkgs/${{ matrix.nixpkgs }}"
           fi
       - run: nix flake check
       - run: nix build --print-build-logs .#notmuch.{out,emacs,man,info}
