nix: github CI trigger on pushes to nix, sort branches only

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ name: "Build"
 "on":
   pull_request:
   push:
+    branches:
+      - nix
+      - sort
   schedule:
     # Weekly
     - cron: '0 15 * * FRI'
