--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,10 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         # Currently some crypto-related test failures on
         # ‘nixpkgs-unstable’ or I’d test that too.
+        nixpkgs: ["pinned"]
+        pre-commit-hooks: ["pinned"]
         include:
-          - nixpkgs: pinned
-            pre-commit-hooks: pinned
           - nixpkgs: release-21.11
-            pre-commit-hooks: pinned
           - nixpkgs: release-21.05
             pre-commit-hooks: ff9c0b459ddc4b79c06e19d44251daa8e9cd1746
       fail-fast: false
