Overlay will override notmuch in emacsPackages too

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,4 +51,5 @@ jobs:
           fi
       - run: nix flake metadata
       - run: nix flake check
-      - run: nix build --print-build-logs .#notmuch.{out,emacs,man,info}
+      - run: nix build --print-build-logs .#notmuch.{out,man,info}
+      - run: nix build --print-build-logs .#emacs-notmuch
