Attempt to use cachix in workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,7 @@ name: "Build"
     # Weekly
     - cron: '0 15 * * FRI'
 jobs:
-  # Avoid re-running workflow for the same commit.
-  # https://github.community/t/avoid-re-running-wokflow-for-the-same-commit/188236/2
-  prebuild:
-    runs-on: ubuntu-latest
-    outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
-    steps:
-      - id: skip_check
-        uses: fkirc/skip-duplicate-actions@v3.4.1
-        with:
-          skip_after_successful_duplicate: 'true'
   build:
-    needs: prebuild
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -38,6 +25,10 @@ jobs:
         with:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - uses: cachix/cachix-action@v10
+        with:
+          name: league
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: |
           nxp=""
           pch=""
