--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,7 +16,7 @@ jobs:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
       - name: Update flake.lock
-        uses: DeterminateSystems/update-flake-lock@v
+        uses: DeterminateSystems/update-flake-lock@v8
         with:
           pr-title: "Update flake inputs"
           token: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
