Better skip-duplicate-actions setting?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@v3.4.1
+        with:
+          concurrent_skipping: 'same_content_newer'
   build:
     needs: pre_build
     if: ${{ needs.pre_build.outputs.should_skip != 'true' }}
