Adjust flake-update schedule

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: "Update flake inputs"
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * TUE'
+    - cron: '20 1 15 * *'       # @monthly on 15th
 jobs:
   update:
     runs-on: ubuntu-latest
